--- a/.config/i3/config
+++ b/.config/i3/config
@@ -19,7 +19,8 @@ set $wfL_height 1000
 set $wfL_width 1800
 
 set $screen1 eDP1
-set $screen2 DP1-2
+#set $screen2 DP1-2
+set $screen2 HDMI1
 
 # layout mode for new container
 workspace_layout tabbed
@@ -62,6 +63,7 @@ bindsym $mod+t exec "dict -d fd-eng-fra $(xclip -o) | tail +4 | dmenu -i -nb '#e
 bindsym $mod+Shift+t exec "dict -d fd-fra-eng $(xclip -o) | tail +4 | dmenu -i -nb '#eee8d5' -nf '#002b36' -sb '#859900' -fn 'MesloLGSDZ Nerd Font-10' -h 36"
 bindsym $mod+y exec dmenu-webnav
 bindsym $mod+i exec dmenu-ssh
+bindsym $mod+Shift+i exec work-file
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -83,8 +85,6 @@ bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 #bindsym $mod+Left focus left
-#bindsym $mod+Down focus down
-#bindsym $mod+Up focus up
 #bindsym $mod+Right focus right
 
 # move focused window
@@ -135,6 +135,8 @@ bindsym $mod+a focus parent
 
 bindsym $mod+Left move workspace to output left
 bindsym $mod+Right move workspace to output right
+bindsym $mod+Up move workspace to output up
+bindsym $mod+Down move workspace to output down
 
 #icon
 set $vimIcon 
@@ -156,7 +158,7 @@ bindsym $mod+1 workspace $menu1; exec [ $( ps -eo cmd | grep -c '[t]ermite --tit
 bindsym $mod+2 workspace $menu2; mark web; exec [ $(ps h -C vimb -o args | grep "^/usr/bin/vimb$" | wc -l) = 0 ] && vimb; move workspace to output $screen2
 bindsym $mod+3 workspace $menu3; exec [ $( ps -eo cmd | grep -c '[t]ermite --title uvim -e vim' ) -eq 2 ] && termite --title uvim -e vim
 #bindsym $mod+4 workspace $menu4; layout tabbed; exec [ $( ps -eo cmd | grep -c '[u]rxvt -title muttgmail -e mutt' ) -eq 2 ] && urxvt -title muttgmail -e mutt -e "source ~/.mutt/gmail.com"
-bindsym $mod+4 workspace $menu4; exec [ $( ps -eo cmd | grep -c '[t]ermite --title mail-gmail' ) -eq 2 ] && termite --title mail-gmail -e '/usr/bin/mutt -e "source ~/.mutt/gmail.com"'
+bindsym $mod+4 workspace $menu4; exec [ $( ps -eo cmd | grep -c '[t]ermite --title mail-gmail' ) -eq 2 ] && termite --title mail-gmail -e /usr/bin/mutt -e "source ~/.mutt/gmail.com"
 bindsym $mod+5 workspace $menu5; exec [ $( ps -eo cmd | grep -c '^/usr/lib/brave-bin/brave' ) -eq 0 ] && /usr/bin/brave; move workspace to output $screen2
 bindsym $mod+6 workspace $menu6; exec ~/share/bin/i3/firefox
 bindsym $mod+7 workspace $menu7; exec ~/share/bin/i3/photos
@@ -185,9 +187,9 @@ bindsym $mod+Shift+0 move container to workspace 10
 #bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $sink +5%
 #bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $sink -5%
 bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
-bindsym XF86AudioNext exec mpc next
-bindsym XF86AudioPrev exec mpc prev
-bindsym XF86AudioPause exec mpc toggle
+bindsym XF86AudioNext exec xf86audio next
+bindsym XF86AudioPrev exec xf86audio prev
+bindsym XF86AudioPause exec xf86audio toggle
 #pb authorisation
 #bindsym XF86MonBrightnessDown   exec xbacklight -dec 5 && pkill -RTMIN+20 i3blocks
 #bindsym XF86MonBrightnessUp     exec xbacklight -inc 5 && pkill -RTMIN+20 i3blocks
@@ -222,47 +224,50 @@ bindsym $mod+o scratchpad show
 #automatic back-and-forth switch workspace
 workspace_auto_back_and_forth yes
 
-
 #generic
-for_window [class="w_float-notitle-medium-sticky"] border 1pixel, floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable
-for_window [class="w_float-notitle-medium"] border 1pixel, floating enable, resize set $wfL_width $wfL_height, move position center
-for_window [class="w_float-notitle"] border 1pixel, floating enable
-for_window [class="w_float"] floating enable
+for_window [class="_popup-notitle-medium-sticky"] border pixel 1, floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable
+for_window [class="_popup-notitle-medium"] border pixel 1, floating enable, resize set $wfL_width $wfL_height, move position center
+for_window [class="_popup-notitle"] border pixel 1, floating enable
+for_window [class="_popup"] floating enable
 
 #large, small and large borderless window popup
-set $float_largeW_app Gpodder|Mpsyt|Modem-manager-gui|Nm-connection-editor|Mattermost
+set $float_largeW_app Gpodder|Mpsyt|Modem-manager-gui|Nm-connection-editor|Mattermost|YouTube Music|Teams
 set $float_smallW_app Pavucontrol|Blueberry.py|Pick-colour-picker
-set $float_borderless_app Sxiv
+set $float_borderless_app Sxiv|Mattermost|YouTube Music
 for_window [class="$float_largeW_app"] floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable
 
 #small window with no title bar (keep it small)
-for_window [class="$float_smallW_app"] floating enable, resize set $wfM_width $wfM_height, move position center, border 1pixel, sticky enable
-for_window [class="$float_borderless_app"]  floating enable, move position center, border 1pixel, sticky enable
+for_window [class="$float_smallW_app"] floating enable, resize set $wfM_width $wfM_height, move position center, border pixel 1, sticky enable
+for_window [class="$float_borderless_app"]  floating enable, move position center, border pixel 1, sticky enable
 
-#second screen
-for_window [class="Caprine|Evolution|Slack|Teams|Brave-browser"] output $screen2
+# no title
+set $no_border no_border|uvim|Urxvt|Termite|Gvim
+for_window [class="$no_border"] border pixel 1
 
 # applications
-for_window [class="Vimb"] border 1pixel, focus
-for_window [title="uvim"] border 1pixel
-for_window [class="URxvt"] border 1pixel
-for_window [class="Termite"] border 1pixel
-for_window [class="Gvim"] border 1pixel
-for_window [title="filemanager"] border 1pixel, layout tabbed
+for_window [title="filemanager"] border pixel 1, layout tabbed
 for_window [title="JACK.*"] floating enable
 for_window [title="Molotov"] floating enable, resize set $wfL_width $wfL_height, move position center, sticky enable, output $screen1
-for_window [class="Deezer"] floating enable, border 1pixel, resize set $wfL_width $wfL_height, move position center, sticky enable, output $screen1
-for_window [class="Caprine"] floating enable, resize set $wfL_width $wfL_height, border 1pixel, sticky enable;
+for_window [class="Deezer"] floating enable, border pixel 1, resize set $wfL_width $wfL_height, move position center, sticky enable, output $screen1
+for_window [class="Caprine"] floating enable, resize set $wfL_width $wfL_height, border pixel 1, sticky enable;
 for_window [title="pinentry"] floating enable
-for_window [class="termite_dict"] floating enable, move position center, border 1pixel
+for_window [class="termite_dict"] floating enable, move position center, border pixel 1
 for_window [title="david_adsnovo - Skype*"] focus, sticky enable, move right, resize shrink left 20 px or 20 ppt, layout splith;
 for_window [title="Liste de contacts"] focus, sticky enable, move right, resize shrink left 20 px or 20 ppt, layout splith;
 for_window [class="Cawbird"] resize set width 640 px;
 for_window [title="^ [^ ]+$"] move --no-auto-back-and-forth container to workspace $menu1, focus
+for_window [title="N26"] sticky enable, border pixel 1, move scratchpad, resize set 500 820, scratchpad show, move position center;
+#for_window [class="Slack"] sticky enable, border pixel 1, move scratchpad, resize set $wfL_width $wfL_height, scratchpad show;
+#for_window [class="Teams"] sticky enable, border pixel 1, move scratchpad, resize set $wfL_width $wfL_height, scratchpad show;
+for_window [class="VirtualBox Machine"] sticky enable, border pixel 1, move scratchpad, fullscreen, scratchpad show;
+for_window [class="Evolution-alarm-notify"] sticky enable, floating enable, border pixel 1, move scratchpad, scratchpad show, resize set 780px 820px, move position 1742px 36px;
 #for_window [title="La Quadrature du Net - Mastodon - Media Fédéré"] focus parent, sticky enable, move right, resize shrink left 20 px or 20 ppt, layout splith;
 #for_window [title="Twitter"] move right; resize shrink left 30 px or 30 ppt;
-#for_window [class="Vimb"] border 1pixel
+#for_window [class="Vimb"] border pixel 1
 #for_window [title="vim"] title_format "<span font='devicons'> </span>%title"
+
+#second screen
+for_window [class="Caprine|Evolution|Brave-browser"] output $screen2
 
 # assign app to dedicated workspace
 assign [class="(pinta|Inkscape)"] graphic
@@ -280,16 +285,11 @@ for_window [class="trefle"] output $screen1
 #for_window [class="Urxvt"] layout splith; focus
 
 #vimb with title starting by "scratchpad_" are moved to the scratch pad and show
-#for_window [title="scratchpad_*"] sticky enable, border 1pixel;
+#for_window [title="scratchpad_*"] sticky enable, border pixel 1;
 set $scratchpads scratchpad_vimwiki|scratchpad_pevimwiki|scratchpad_vimdiary|scratchpad_vimb|skype|pidgin|iCloud|gPodder
-for_window [title="$scratchpads"] sticky enable, border 1pixel, move scratchpad, scratchpad show;
-for_window [title="Franz"] sticky enable, border 1pixel, move scratchpad, resize set 720 874, scratchpad show, move absolute position 720px 24px;
-for_window [title="scratchpad_ncmpcpp"] sticky enable, border 1pixel, move scratchpad, resize set $wfM_width  $wfM_height, scratchpad show;
-for_window [title="scratchpad_cal"] sticky enable, border 1pixel, move scratchpad, scratchpad show;
-for_window [title="N26"] sticky enable, border 1pixel, move scratchpad, resize set 500 820, scratchpad show, move position center;
-for_window [class="Slack"] sticky enable, border 1pixel, move scratchpad, resize set $wfL_width $wfL_height, scratchpad show;
-for_window [class="Teams"] sticky enable, border 1pixel, move scratchpad, resize set $wfL_width $wfL_height, scratchpad show;
-for_window [class="VirtualBox Machine"] sticky enable, border 1pixel, move scratchpad, fullscreen, scratchpad show;
+for_window [title="$scratchpads"] sticky enable, border pixel 1, move scratchpad, scratchpad show;
+for_window [title="scratchpad_ncmpcpp"] sticky enable, border pixel 1, move scratchpad, resize set $wfM_width  $wfM_height, scratchpad show;
+for_window [title="scratchpad_cal"] sticky enable, border pixel 1, move scratchpad, scratchpad show;
 
 client.focused #859900 #859900 #eee8d5 #859900
 client.focused_inactive #073642 #073642 #586e75 #6c71c4
@@ -326,10 +326,10 @@ mode "resize / move / [s]ticky / [bB]order / [c]enter / [f]loat right corner" {
     bindsym k resize shrink height 10 px or 10 ppt
     bindsym l resize shrink width 10 px or 10 ppt
     bindsym s sticky toggle, mode "default"
-    bindsym B border 1pixel, mode "default"
+    bindsym B border pixel 1, mode "default"
     bindsym b border normal, mode "default"
-    bindsym f border 1pixel, sticky enable, exec python3 -m i3grid snap --target 9 --rows 3 --cols 3, mode "default"
-    #bindsym f floating enable, resize set $wfM_width $wfM_height, border 1pixel, sticky enable, mode "default"
+    bindsym f border pixel 1, sticky enable, exec python3 -m i3grid snap --target 9 --rows 3 --cols 3, mode "default"
+    #bindsym f floating enable, resize set $wfM_width $wfM_height, border pixel 1, sticky enable, mode "default"
     bindsym c move position center, mode "default"
 
     # same bindings, but for the arrow keys
@@ -345,7 +345,7 @@ mode "resize / move / [s]ticky / [bB]order / [c]enter / [f]loat right corner" {
 
 # Press $mod+o followed by either f, t, Esc or Return to launch firefox,
 #  etc ... or return to the default mode, respectively.
-set $mode_launcher Launch: [f]irefox [t]rello [s]lack [r]emmina [w]ork-env [W]riter
+set $mode_launcher Launch: [f]irefox [t]rello [s]lack [m]attermost [r]emmina [w]ork-env [W]riter
 bindsym $mod+p mode "$mode_launcher"
 
 mode "$mode_launcher" {
@@ -353,6 +353,7 @@ mode "$mode_launcher" {
     bindsym f exec firefox, mode "default"
     bindsym t exec trello, mode "default"
     bindsym s exec slack, mode "default"
+    bindsym m exec mattermost-desktop, mode "default"
     bindsym r exec remmina, mode "default"
     bindsym w exec work-env, mode "default"
     bindsym W exec writer, mode "default"
@@ -440,20 +441,21 @@ mode "$mode_player" {
     bindsym Escape mode "default"
 }
 
-bindsym $capsLock+t exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_pevimwiki' ) -eq 2 ] && termite --title scratchpad_pevimwiki -e 'vim share/vimwiki_boulot/index.wiki' || i3-msg [title=scratchpad_pevimwiki] scratchpad show;
-bindsym $capsLock+w exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimwiki' ) -eq 2 ] && termite --title scratchpad_vimwiki -e 'vim -c VimwikiIndex' || i3-msg [title=scratchpad_vimwiki] scratchpad show;
-bindsym $capsLock+i exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimdiary' ) -eq 2 ] && termite --title scratchpad_vimdiary -e 'vim -c VimwikiDiaryIndex' || i3-msg [title=scratchpad_vimdiary] scratchpad show;
-bindsym $capsLock+v exec [ $( ps -eo cmd | grep -c '[t]ermite --class scratchpad --title scratchpad_vimb' ) -eq 2 ] && termite --class scratchpad --title scratchpad_vimb -e 'vim .config/vimb/config' || i3-msg [title=scratchpad_vimb] scratchpad show;
+bindsym $capsLock+t exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_pevimwiki' ) -eq 2 ] && (termite --title scratchpad_pevimwiki -e vim ~/share/vimwiki_boulot/index.wiki) || i3-msg [title=scratchpad_pevimwiki] scratchpad show;
+bindsym $capsLock+w exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimwiki' ) -eq 2 ] && (termite --title scratchpad_vimwiki -e vim -c VimwikiIndex) || i3-msg [title=scratchpad_vimwiki] scratchpad show;
+bindsym $capsLock+i exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimdiary' ) -eq 2 ] && (termite --title scratchpad_vimdiary -e vim -c VimwikiDiaryIndex) || i3-msg [title=scratchpad_vimdiary] scratchpad show;
+bindsym $capsLock+v exec [ $( ps -eo cmd | grep -c '[t]ermite --class scratchpad --title scratchpad_vimb' ) -eq 2 ] && (termite --class scratchpad --title scratchpad_vimb -e vim .config/vimb/config) || i3-msg [title=scratchpad_vimb] scratchpad show;
 #bindsym $capsLock+c exec [ $( ps -eo cmd | grep -c '[/]usr/bin/franz-bin' ) -eq 2 ] && /usr/bin/franz-bin || i3-msg [title=Franz] scratchpad show;
-bindsym $capsLock+m exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_ncmpcpp' ) -eq 2 ] && termite --title scratchpad_ncmpcpp -e 'ncmpcpp' || i3-msg [title=scratchpad_ncmpcpp] scratchpad show;
+bindsym $capsLock+m exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_ncmpcpp' ) -eq 2 ] && (termite --title scratchpad_ncmpcpp -e ncmpcpp) || i3-msg [title=scratchpad_ncmpcpp] scratchpad show;
 bindsym $capsLock+Shift+m exec popup -h -t mpsyt -e mpsyt
 bindsym $capsLock+k exec stig-i3
 bindsym $capsLock+p exec [ -z $( ps h -C gpodder -o comm=Command ) ] && gpodder || i3-msg [title=gPodder floating] scratchpad show;
 bindsym $capsLock+r exec popup -h -t radio pyradio
-bindsym $capsLock+e exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_cal' ) -eq 2 ] && termite --title scratchpad_cal -e 'pal -m' || i3-msg [title=scratchpad_cal] scratchpad show;
+bindsym $capsLock+e exec popup -t cal pal -m
 bindsym $capsLock+n exec i3-msg '[class="VirtualBox Machine"] scratchpad show' && i3-msg '[class="VirtualBox Machine"] fullscreen enable';
-bindsym $capsLock+s exec i3-msg '[class="Slack"] scratchpad show';
-bindsym $capsLock+Shift+s exec i3-msg '[class="Teams"] scratchpad show';
+bindsym $capsLock+s exec i3-msg '[class="Mattermost"] scratchpad show' && i3-msg '[class="Mattermost"] move position center';
+bindsym $capsLock+Shift+s exec i3-msg '[class="Teams"] scratchpad show' && i3-msg '[class="Teams"] move position center';
+bindsym $capsLock+q exec qrcode
 #bindsym $capsLock+w exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimwiki' ) -eq 2 ] && termite --title scratchpad_vimwiki -e 'vim -c VimwikiIndex' || i3-msg kill;
 #bindsym $capsLock+i exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimdiary' ) -eq 2 ] && termite --title scratchpad_vimdiary -e 'vim -c VimwikiDiaryIndex' || i3-msg kill;
 #bindsym $capsLock+v exec [ $( ps -eo cmd | grep -c '[t]ermite --title scratchpad_vimb' ) -eq 2 ] && termite --title scratchpad_vimb -e 'vim .config/vimb/config' || i3-msg kill;
