Add autoscreen lock with fund + fix audio keys

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -184,11 +184,11 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pamixer -d 2  && $refresh_i3st
 bindsym XF86AudioMute exec --no-startup-id pamixer -t && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 # mpd control by media keys
-bindsym XF86AudioPlay exec "~/share/xf86audio toggle"
-bindsym XF86AudioPrev exec "~/share/xf86audio prev"
-bindsym XF86AudioNext exec "~/share/xf86audio next"
-bindsym XF86AudioForward exec "~/share/xf86audio forw"
-bindsym XF86AudioRewind exec "~/share/xf86audio back"
+bindsym XF86AudioPlay exec "~/share/bin/xf86audio toggle"
+bindsym XF86AudioPrev exec "~/share/bin/xf86audio prev"
+bindsym XF86AudioNext exec "~/share/bin/xf86audio next"
+bindsym XF86AudioForward exec "~/share/bin/xf86audio forw"
+bindsym XF86AudioRewind exec "~/share/bin/xf86audio back"
 #bindsym XF86AudioNext exec --no-startup-id mpc next
 #bindsym XF86AudioPrev exec --no-startup-id mpc prev
 #bindsym XF86AudioPlay exec --no-startup-id mpc toggle
@@ -469,7 +469,7 @@ bindsym $capsLock+Shift+s exec i3-msg '[class="Teams"] scratchpad show';
 #bindsym $mod+x shmlog toggle
 
 # Screensaver
-# exec xautolock -locker "termite --title screensaver -e 'asciiquarium'"
+exec xautolock -corners -00+ -time 4 -locker "funst --screen-saver"
 
 # Background image
 # see in xprofile
