--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -107,7 +107,7 @@ audio_output {
 # This setting can deny access to control of the daemon.
 #
 # For network
-#bind_to_address		"any"
+bind_to_address		"localhost"
 #
 # And for Unix Socket
 #bind_to_address		"~/.mpd/socket"
