--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,13 +1,13 @@
 # Required files
- db_file            "~/.config/mpd/database"
+ db_file            "~/Music/.mpd/database"
  log_file           "~/.config/mpd/log"
 
  # Optional
- music_directory    "~/Music"
- playlist_directory "~/.config/mpd/playlists"
+ music_directory    "~/Music/"
+ playlist_directory "~/Music/_creamy/playlists"
  pid_file           "~/.config/mpd/pid"
- state_file         "~/.config/mpd/state"
- sticker_file       "~/.config/mpd/sticker.sql"
+ state_file         "~/Music/.mpd/state"
+ sticker_file       "~/Music/.mpd/sticker.sql"
 
 audio_output {
 	type		"pulse"
